[workspace]
members =  ["common", "pi_p", "pi_s", "pi_la", "pi_f", "b_pi_la", "b_pi_p", "b_pi_p_plus", "b_pi_f"]
resolver = "2"

[workspace.package]
authors = ["Georgio Nicolas <me@georgio.xyz>"]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
curve25519-dalek = {version = "4.1.3", features = ["rand_core", "serde"] }
error-chain = "0.12.4"
rand = "0.9.2"
rayon = "1.11.0"
zeroize = "1.8.1"
criterion = "0.7.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1