[package]
name = "pi_s"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}


[dependencies]
curve25519-dalek = {workspace = true}
error-chain = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
rayon = {workspace = true}
zeroize = {workspace = true}

[target.'cfg(all(target_arch = "aarch64"))'.dependencies]
blake3 = {version = "1.7.0", features = ["neon", "rayon", "zeroize", "traits-preview"]}
[target.'cfg(all(target_arch = "x86_64"))'.dependencies]
blake3 = {version = "1.7.0", features = ["rayon", "zeroize", "traits-preview"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
